kubernetes/database/database-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: database
  labels:
    name: database
  annotations:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
